GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/Salesforce_Support_Time_Tracker__c.object-meta.xml
<CustomObject>
    <label>Salesforce Support Time Tracker</label>
    <nameField>
        <displayFormat>SSTT-{00000}</displayFormat>
        <label>SSTT Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Support Time Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>