GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/COE_Department__c.field-meta.xml
<CustomField>
    <fullName>COE_Department__c</fullName>
    <label>COE / Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CodeSwat</fullName>
            </value>
            <value>
                <fullName>Commercial Support</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>D.o.N</fullName>
            </value>
            <value>
                <fullName>EuroDespatch</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>HLC</fullName>
            </value>
            <value>
                <fullName>IS Servicedesk</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>QA / Insight</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>The Hub</fullName>
            </value>
            <value>
                <fullName>Webhelp (Bucharest)</fullName>
            </value>
            <value>
                <fullName>Webhelp (Derby)</fullName>
            </value>
            <value>
                <fullName>Webhelp (Live Chat)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>