GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/Date_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Work__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date of Work</label>
    <type>Date</type>
</CustomField>