GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/Improvement_Development_Workstream__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Development_Workstream__c</fullName>
    <label>Improvement &amp; Development Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amsterdam Staff Booking Form</fullName>
                <isActive>false</isActive>
                <label>Amsterdam Staff Booking Form</label>
            </value>
            <value>
                <fullName>BSP ACM/ADM Logging</fullName>
            </value>
            <value>
                <fullName>Bug Tracking</fullName>
            </value>
            <value>
                <fullName>Call Split tracking object</fullName>
                <isActive>false</isActive>
                <label>Call Split tracking object</label>
            </value>
            <value>
                <fullName>Capacity Optimisation</fullName>
            </value>
            <value>
                <fullName>Carmen Review and Improvements</fullName>
                <isActive>false</isActive>
                <label>Carmen Review and Improvements</label>
            </value>
            <value>
                <fullName>Changes to List Views</fullName>
            </value>
            <value>
                <fullName>Cleaning of Salesforce</fullName>
                <isActive>false</isActive>
                <label>Cleaning of Salesforce</label>
            </value>
            <value>
                <fullName>Dynamic Package Case Logging</fullName>
            </value>
            <value>
                <fullName>Eurostar Signature Service</fullName>
                <isActive>false</isActive>
                <label>Eurostar Signature Service</label>
            </value>
            <value>
                <fullName>Groups Changes</fullName>
                <isActive>false</isActive>
                <label>Groups Changes</label>
            </value>
            <value>
                <fullName>HLC Payment Run</fullName>
                <isActive>false</isActive>
                <label>HLC Payment Run</label>
            </value>
            <value>
                <fullName>Junior Traveller Routing</fullName>
            </value>
            <value>
                <fullName>Live Chat Improvements</fullName>
                <isActive>false</isActive>
                <label>Live Chat Improvements</label>
            </value>
            <value>
                <fullName>Manual eVoucher Request Form</fullName>
                <isActive>false</isActive>
                <label>Manual eVoucher Request Form</label>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
                <isActive>false</isActive>
                <label>Marketing Cloud</label>
            </value>
            <value>
                <fullName>Mobile App Feedback Tool</fullName>
            </value>
            <value>
                <fullName>Momentum Member Request Logging</fullName>
            </value>
            <value>
                <fullName>New Booking Upsell Process</fullName>
            </value>
            <value>
                <fullName>New Complaint Logging Process</fullName>
                <isActive>false</isActive>
                <label>New Complaint Logging Process</label>
            </value>
            <value>
                <fullName>Overtime Process Improvement</fullName>
                <isActive>false</isActive>
                <label>Overtime Process Improvement</label>
            </value>
            <value>
                <fullName>Rail Care Team Registration Form</fullName>
            </value>
            <value>
                <fullName>Returned EFT Card Tracking</fullName>
            </value>
            <value>
                <fullName>Semi-Automation of PRR</fullName>
                <isActive>false</isActive>
                <label>Semi-Automation of PRR</label>
            </value>
            <value>
                <fullName>Stella Connect Enhancements</fullName>
            </value>
            <value>
                <fullName>Teleopti Salesforce Integration</fullName>
            </value>
            <value>
                <fullName>Time and Motion</fullName>
            </value>
            <value>
                <fullName>Write-Off Approval Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>