GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/Meeting_Regarding__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Regarding__c</fullName>
    <label>Meeting Regarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Staff Meeting</fullName>
            </value>
            <value>
                <fullName>Amsterdam Booking Form</fullName>
                <isActive>false</isActive>
                <label>Amsterdam Booking Form</label>
            </value>
            <value>
                <fullName>Anthony (CRM Management) Or His Interns</fullName>
            </value>
            <value>
                <fullName>Aria</fullName>
            </value>
            <value>
                <fullName>Carmen</fullName>
                <isActive>false</isActive>
                <label>Carmen</label>
            </value>
            <value>
                <fullName>Club Eurostar - Returned Cards</fullName>
            </value>
            <value>
                <fullName>CodeSwat</fullName>
            </value>
            <value>
                <fullName>Digital Genius</fullName>
                <isActive>false</isActive>
                <label>Digital Genius</label>
            </value>
            <value>
                <fullName>Disruption / ICT</fullName>
            </value>
            <value>
                <fullName>Eureka</fullName>
            </value>
            <value>
                <fullName>Eurostar Signature Service</fullName>
            </value>
            <value>
                <fullName>Future Loyalty Project</fullName>
                <isActive>false</isActive>
                <label>Future Loyalty Project</label>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Groups Upsell</fullName>
                <isActive>false</isActive>
                <label>Groups Upsell</label>
            </value>
            <value>
                <fullName>Junior Traveller</fullName>
                <isActive>false</isActive>
                <label>Junior Traveller</label>
            </value>
            <value>
                <fullName>Junior Travellers</fullName>
            </value>
            <value>
                <fullName>Mobile App Feedback Page</fullName>
            </value>
            <value>
                <fullName>Overbooking</fullName>
            </value>
            <value>
                <fullName>Packages</fullName>
            </value>
            <value>
                <fullName>Personal Meetings</fullName>
            </value>
            <value>
                <fullName>PRR</fullName>
                <isActive>false</isActive>
                <label>PRR</label>
            </value>
            <value>
                <fullName>QA / I&amp;I</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Skills</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Staff Travel</fullName>
            </value>
            <value>
                <fullName>StellaConnect</fullName>
            </value>
            <value>
                <fullName>Traveller Care</fullName>
            </value>
            <value>
                <fullName>Webhelp</fullName>
            </value>
            <value>
                <fullName>Westwood Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>