GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blue/Overseas Vouchers - Aria</fullName>
            </value>
            <value>
                <fullName>Club Eurostar</fullName>
            </value>
            <value>
                <fullName>Digital Genius</fullName>
            </value>
            <value>
                <fullName>Dynamic Packaging</fullName>
            </value>
            <value>
                <fullName>Eureka to Salesforce</fullName>
            </value>
            <value>
                <fullName>Eurostar Signature Service</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>StellaConnect Integration</fullName>
            </value>
            <value>
                <fullName>Webhelp Reporting</fullName>
            </value>
            <value>
                <fullName>West Phone Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>