GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/Requested_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Text__c</fullName>
    <label>Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>