GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>LEFT(TEXT(Date_of_Work__c),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>