GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/recordTypes/Ad_Hoc_Work.recordType-meta.xml
<RecordType>
    <fullName>Ad_Hoc_Work</fullName>
    <active>true</active>
    <label>Ad-Hoc Work</label>
</RecordType>