GearsetPOC/force-app/main/default/objects/Salesforce_Support_Time_Tracker__c/recordTypes/Improvement_Dev_Work.recordType-meta.xml
<RecordType>
    <fullName>Improvement_Dev_Work</fullName>
    <active>true</active>
    <label>Improvement &amp; Dev Work</label>
</RecordType>